crates/context-macro/tests/constraints/init_seeds_keys.fail.stderr
error: `seeds` or `seeded` are already defined.
  --> tests/constraints/init_seeds_keys.fail.rs:31:9
   |
31 |     pub counter: Mut<Account<Counter>>,
   |         ^^^^^^^
